--- a/index.css
+++ b/index.css
@@ -1,8 +1,31 @@
+header{
+  background-image: url(img/pattern.png);
+  background-color: lightblue;
+  margin: 0%;
+}
+
+.logo{
+  width: 300px;
+  height: 100px;
+}
+
 .title strong{
   color: aqua;
 }
 
 .evidenziato{
+  background-color: yellow;
+}
+
+th{
+  background-color: aqua;
+}
+
+.tabblu{
+  background-color: cadetblue;
+}
+
+.evidenziato2{
   background-color: yellow;
 }
 
@@ -16,4 +39,12 @@
   background-image: url(img/graph.jpg);
   width: 200px;
   height: 150px;
+}
+
+h3{
+  color: grey;
+}
+
+.bianco1{
+  color: white;
 }
